--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./assets/styles.css">
   <title>Frontend Mentor | Job Listings</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -16,178 +18,255 @@
 </head>
 <body>
   <!-- Item Start -->
-  Photosnap
-  New!
-  Featured
-  Senior Frontend Developer
-  1d ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Senior
-  <!-- Languages -->
-  HTML
-  CSS
-  JavaScript
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Manage
-  New!
-  Featured
-  Fullstack Developer
-  1d ago
-  Part Time
-  Remote
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  Python
-  <!-- Tools -->
-  React
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Account
-  New!
-  Junior Frontend Developer
-  2d ago
-  Part Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  MyHome
-  Junior Frontend Developer
-  5d ago
-  Contract
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  CSS
-  JavaScript
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Loop Studios
-  Software Engineer
-  1w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Ruby
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  FaceIt
-  Junior Backend Developer
-  2w ago
-  Full Time
-  UK only
-  <!-- Role -->
-  Backend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  Ruby
-  <!-- Tools -->
-  RoR
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Shortly
-  Junior Developer
-  2w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  HTML
-  JavaScript
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Insure
-  Junior Frontend Developer
-  2w ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  Vue
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Eyecam Co.
-  Full Stack Engineer
-  3w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Python
-  <!-- Tools -->
-  Django
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  The Air Filter Company
-  Front-end Dev
-  1mo ago
-  Part Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-  
+  <header class="header">
+    <picture>
+      <source media="(min-width: 768px)" srcset="./images/bg-header-desktop.svg" alt="Desktop background">
+      <img src="./images/bg-header-mobile.svg" alt="Mobile background" srcset="">
+    </picture>
+    <div class="search active">
+      <div class="search-container">
+      <div class="search-tags">
+        <div class="seach-tag_container">
+        <span class="search-tag">Front-end</span>
+        <button class="remove-btn"><img src="./images/icon-remove.svg" alt="Remove icon"></button>          
+        </div>
+        </div>
+        <div class="search-tags">
+          <div class="seach-tag_container">
+          <span class="search-tag">Front-end</span>
+          <button class="remove-btn"><img src="./images/icon-remove.svg" alt="Remove icon"></button>          
+          </div>
+        </div>
+          <div class="search-tags">
+            <div class="seach-tag_container">
+            <span class="search-tag">Front-end</span>
+            <button class="remove-btn"><img src="./images/icon-remove.svg" alt="Remove icon"></button>          
+            </div>
+          </div>
+      </div>
+      <p class="clear-btn">Clear</p>
+    </div>
+  </header>
+  <main class="main-container">
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/photosnap.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Photosnap</p>
+          <span class="new-tag">new!</span>
+          <span class="featured-tag">Featured</span>
+        </div>
+        <h2><a href="#"   class="job-title">Frontend Developer</a> </h2>
+        <div class="job-info">
+          <p class="timestamp">1d ago</p>
+          <p class="work-schedule">Full Time</p>
+          <p class="work-modality">USA only</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="frontend">Frontend</span>
+        <span class="senior">Senior</span>
+        <span class="html">HTML</span>
+        <span class="css">CSS</span>
+        <span class="javascript">JavaScript</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/manage.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Manage</p>
+          <span class="new-tag">new!</span>
+          <span class="featured-tag">Featured</span>
+        </div>
+        <h2><a href="#" class="job-title">Fullstack Developer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">1d ago</p>
+          <p class="work-schedule">Part Time</p>
+          <p class="work-modality">Remote</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="fullstack">Fullstack</span>
+        <span class="midweight">Midweight</span>
+        <span class="python">Python</span>
+        <span class="react">React</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/account.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Account</p>
+          <span class="new-tag">new!</span>
+        </div>
+        <h2><a href="#"  class="job-title">Junior Frontend Developer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">2d ago</p>
+          <p class="work-schedule">Part Time</p>
+          <p class="work-modality">USA only</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="frontend">Frontent</span>
+        <span class="junior">Junior</span>
+        <span class="react">React</span>
+        <span class="Sass">Sass</span>
+        <span class="javascript">JavaScript</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/myhome.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">My Home</p>
+        </div>
+        <h2><a href="#"  class="job-title">Junior Frontend Developer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">5d ago</p>
+          <p class="work-schedule">Contract</p>
+          <p class="work-modality">USA only</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="frontend">Frontend</span>
+        <span class="junior">Junior</span>
+        <span class="css">CSS</span>
+        <span class="javascript">JavaScript</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/loop-studios.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Loop Studios</p>
+        </div>
+        <h2><a href="#"  class="job-title">Software Engineer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">1w ago</p>
+          <p class="work-schedule">Full Time</p>
+          <p class="work-modality">Worldwide</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="fullstack">Fullstack</span>
+        <span class="midweight">Midweight</span>
+        <span class="javascript">JavaScript</span>
+        <span class="sass">Sass</span>
+        <span class="ruby">Ruby</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/faceit.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">FaceIt</p>
+        </div>
+        <h2><a href="#"  class="job-title">Junior Backend Developer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">2w ago</p>
+          <p class="work-schedule">Full Time</p>
+          <p class="work-modality">UK only</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="backend">Backend</span>
+        <span class="junior">Junior</span>
+        <span class="ruby">Ruby</span>
+        <span class="RoR">RoR</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/shortly.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Shortly</p>
+        </div>
+        <h2><a href="#"  class="job-title">Junior Developer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">2w ago</p>
+          <p class="work-schedule">Full Time</p>
+          <p class="work-modality">Worldwide</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="frontend">Frontend</span>
+        <span class="junior">Junior</span>
+        <span class="html">HTML</span>
+        <span class="sass">Sass</span>
+        <span class="javascript">JavaScript</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/insure.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Insure</p>
+        </div>
+        <h2><a href="#"  class="job-title">Junior Frontend Developer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">2w ago</p>
+          <p class="work-schedule">Full Time</p>
+          <p class="work-modality">USA only</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="frontend">Frontend</span>
+        <span class="junior">Junior</span>
+        <span class="vue">Vue</span>
+        <span class="javascript">JavaScript</span>
+        <span class="sass">Sass</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/eyecam-co.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">Eyecam Co.</p>
+        </div>
+        <h2><a href="#"  class="job-title">Full Stack Engineer</a></h2>
+        <div class="job-info">
+          <p class="timestamp">3w ago</p>
+          <p class="work-schedule">Full Time</p>
+          <p class="work-modality">Worldwide</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="fullstack">Fullstack</span>
+        <span class="midweight">Midweight</span>
+        <span class="javascript">JavaScript</span>
+        <span class="django">Django</span>
+        <span class="python">Python</span>
+      </div>
+    </article>
+    <article class="card">
+      <div class="job-offer_info">
+        <img src="./images/the-air-filter-company.svg" alt="Employer icon" srcset="">
+        <div class="employer-info">
+          <p class="employer">The Air Filter Company</p>
+        </div>
+        <h2><a href="#"  class="job-title">Front-end Dev</a></h2>
+        <div class="job-info">
+          <p class="timestamp">1mo ago</p>
+          <p class="work-schedule">Part Time</p>
+          <p class="work-modality">Worldwide</p>
+        </div>
+      </div>
+      <div class="work-tags">
+        <span class="frontend">Frontend</span>
+        <span class="junior">Junior</span>
+        <span class="react">React</span>
+        <span class="sass">Sass</span>
+        <span class="javascript">JavaScript</span>
+      </div>
+    </article>
+  </main>
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/jenn-acosta7/">Jenn Acosta</a>.
   </div>
+  </footer>
+  <script src="./app/app.js"></script>
 </body>
 </html>
