updated index.html, styles.css and app.js

--- a/index.html
+++ b/index.html
@@ -25,30 +25,12 @@
     </picture>
     <div class="search active">
       <div class="search-container">
-      <div class="search-tags">
-        <div class="seach-tag_container">
-        <span class="search-tag">Front-end</span>
-        <button class="remove-btn"><img src="./images/icon-remove.svg" alt="Remove icon"></button>          
-        </div>
-        </div>
-        <div class="search-tags">
-          <div class="seach-tag_container">
-          <span class="search-tag">Front-end</span>
-          <button class="remove-btn"><img src="./images/icon-remove.svg" alt="Remove icon"></button>          
-          </div>
-        </div>
-          <div class="search-tags">
-            <div class="seach-tag_container">
-            <span class="search-tag">Front-end</span>
-            <button class="remove-btn"><img src="./images/icon-remove.svg" alt="Remove icon"></button>          
-            </div>
-          </div>
       </div>
       <p class="clear-btn">Clear</p>
     </div>
   </header>
   <main class="main-container">
-    <article class="card">
+    <!--<article class="card">
       <div class="job-offer_info">
         <img src="./images/photosnap.svg" alt="Employer icon" srcset="">
         <div class="employer-info">
@@ -70,196 +52,7 @@
         <span class="css">CSS</span>
         <span class="javascript">JavaScript</span>
       </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/manage.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">Manage</p>
-          <span class="new-tag">new!</span>
-          <span class="featured-tag">Featured</span>
-        </div>
-        <h2><a href="#" class="job-title">Fullstack Developer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">1d ago</p>
-          <p class="work-schedule">Part Time</p>
-          <p class="work-modality">Remote</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="fullstack">Fullstack</span>
-        <span class="midweight">Midweight</span>
-        <span class="python">Python</span>
-        <span class="react">React</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/account.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">Account</p>
-          <span class="new-tag">new!</span>
-        </div>
-        <h2><a href="#"  class="job-title">Junior Frontend Developer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">2d ago</p>
-          <p class="work-schedule">Part Time</p>
-          <p class="work-modality">USA only</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="frontend">Frontent</span>
-        <span class="junior">Junior</span>
-        <span class="react">React</span>
-        <span class="Sass">Sass</span>
-        <span class="javascript">JavaScript</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/myhome.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">My Home</p>
-        </div>
-        <h2><a href="#"  class="job-title">Junior Frontend Developer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">5d ago</p>
-          <p class="work-schedule">Contract</p>
-          <p class="work-modality">USA only</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="frontend">Frontend</span>
-        <span class="junior">Junior</span>
-        <span class="css">CSS</span>
-        <span class="javascript">JavaScript</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/loop-studios.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">Loop Studios</p>
-        </div>
-        <h2><a href="#"  class="job-title">Software Engineer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">1w ago</p>
-          <p class="work-schedule">Full Time</p>
-          <p class="work-modality">Worldwide</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="fullstack">Fullstack</span>
-        <span class="midweight">Midweight</span>
-        <span class="javascript">JavaScript</span>
-        <span class="sass">Sass</span>
-        <span class="ruby">Ruby</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/faceit.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">FaceIt</p>
-        </div>
-        <h2><a href="#"  class="job-title">Junior Backend Developer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">2w ago</p>
-          <p class="work-schedule">Full Time</p>
-          <p class="work-modality">UK only</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="backend">Backend</span>
-        <span class="junior">Junior</span>
-        <span class="ruby">Ruby</span>
-        <span class="RoR">RoR</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/shortly.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">Shortly</p>
-        </div>
-        <h2><a href="#"  class="job-title">Junior Developer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">2w ago</p>
-          <p class="work-schedule">Full Time</p>
-          <p class="work-modality">Worldwide</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="frontend">Frontend</span>
-        <span class="junior">Junior</span>
-        <span class="html">HTML</span>
-        <span class="sass">Sass</span>
-        <span class="javascript">JavaScript</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/insure.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">Insure</p>
-        </div>
-        <h2><a href="#"  class="job-title">Junior Frontend Developer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">2w ago</p>
-          <p class="work-schedule">Full Time</p>
-          <p class="work-modality">USA only</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="frontend">Frontend</span>
-        <span class="junior">Junior</span>
-        <span class="vue">Vue</span>
-        <span class="javascript">JavaScript</span>
-        <span class="sass">Sass</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/eyecam-co.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">Eyecam Co.</p>
-        </div>
-        <h2><a href="#"  class="job-title">Full Stack Engineer</a></h2>
-        <div class="job-info">
-          <p class="timestamp">3w ago</p>
-          <p class="work-schedule">Full Time</p>
-          <p class="work-modality">Worldwide</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="fullstack">Fullstack</span>
-        <span class="midweight">Midweight</span>
-        <span class="javascript">JavaScript</span>
-        <span class="django">Django</span>
-        <span class="python">Python</span>
-      </div>
-    </article>
-    <article class="card">
-      <div class="job-offer_info">
-        <img src="./images/the-air-filter-company.svg" alt="Employer icon" srcset="">
-        <div class="employer-info">
-          <p class="employer">The Air Filter Company</p>
-        </div>
-        <h2><a href="#"  class="job-title">Front-end Dev</a></h2>
-        <div class="job-info">
-          <p class="timestamp">1mo ago</p>
-          <p class="work-schedule">Part Time</p>
-          <p class="work-modality">Worldwide</p>
-        </div>
-      </div>
-      <div class="work-tags">
-        <span class="frontend">Frontend</span>
-        <span class="junior">Junior</span>
-        <span class="react">React</span>
-        <span class="sass">Sass</span>
-        <span class="javascript">JavaScript</span>
-      </div>
-    </article>
+    </article>-->
   </main>
   <footer>
   <div class="attribution">
